gcc/testsuite/rust/compile/torture/very-broken-attr-string.rs
// { dg-excess-errors "...." }
// { dg-error "unended string literal" "" { target *-*-* } .+1 }
#[doc(alias = "123
